--- a/styles/globals.css
+++ b/styles/globals.css
@@ -117,6 +117,7 @@ body {
   -webkit-font-smoothing: antialiased;
   overflow-x: hidden;
   width: 100%;
+  overscroll-behavior-y: none;
 }
 
 .mainFrame {
